[gd_scene load_steps=15 format=3 uid="uid://deev21xmgxd1s"]

[ext_resource type="Script" path="res://src/components/extractor/extractor.gd" id="1_1c0ki"]
[ext_resource type="AudioStream" uid="uid://s44lugkjk2tt" path="res://assets/Sound/aliens-tractorbeamloop.wav" id="1_74yjj"]
[ext_resource type="AudioStream" uid="uid://d2slqm60l3i5c" path="res://assets/Sound/aliens-but-up.wav" id="2_4y77l"]
[ext_resource type="PackedScene" uid="uid://cq57jjucnis7h" path="res://assets/Models/Spaceship.blend" id="4_mnxsf"]
[ext_resource type="Shader" uid="uid://dk766er40p20n" path="res://src/Shaders/TracktorBeam.tres" id="5_554cc"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k8po8"]
albedo_color = Color(0.887762, 0.557573, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_2p2fw"]
material = SubResource("StandardMaterial3D_k8po8")
top_radius = 1.0
bottom_radius = 1.3
height = 0.4

[sub_resource type="CylinderShape3D" id="CylinderShape3D_oyref"]
height = 6.09949
radius = 1.35139

[sub_resource type="Animation" id="Animation_027fx"]
resource_name = "extract"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spaceship/MeshInstance3D:surface_material_override/0:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_m2oyj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spaceship/MeshInstance3D:surface_material_override/0:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cg6h3"]
_data = {
"RESET": SubResource("Animation_m2oyj"),
"extract": SubResource("Animation_027fx")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pq7gt"]
render_priority = 0
shader = ExtResource("5_554cc")
shader_parameter/ColorParameter = Color(0.839574, 0.53082, 0.073509, 1)
shader_parameter/Flash = false

[sub_resource type="CylinderMesh" id="CylinderMesh_vvj8a"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uydem"]
render_priority = 1
transparency = 1
shading_mode = 0
albedo_color = Color(1, 1, 1, 0)

[node name="Extractor" type="Node3D"]
script = ExtResource("1_1c0ki")

[node name="BaseMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_2p2fw")
skeleton = NodePath("../..")

[node name="TractorBeamSound" type="AudioStreamPlayer3D" parent="BaseMesh"]
stream = ExtResource("1_74yjj")
volume_db = 40.0
autoplay = true
max_distance = 50.0
panning_strength = 1.36
doppler_tracking = 2

[node name="AbsorbItemsSound" type="AudioStreamPlayer3D" parent="BaseMesh"]
unique_name_in_owner = true
stream = ExtResource("2_4y77l")
volume_db = 10.0
max_db = 6.0

[node name="Area3D" type="Area3D" parent="." groups=["extractor"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.55178, 0)
shape = SubResource("CylinderShape3D_oyref")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cg6h3")
}

[node name="Spaceship" parent="." instance=ExtResource("4_mnxsf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.85504, 0)

[node name="Tracktorbeam" parent="Spaceship" index="3"]
transform = Transform3D(0.42947, 0, 0, 0, 0.663502, 0, 0, 0, 0.42947, 0, 6.22508, 0)
surface_material_override/0 = SubResource("ShaderMaterial_pq7gt")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Spaceship"]
transform = Transform3D(6.21594, 0, 0, 0, 9.72076, 0, 0, 0, 6.21594, 0, 0.91643, 0)
mesh = SubResource("CylinderMesh_vvj8a")
surface_material_override/0 = SubResource("StandardMaterial3D_uydem")

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]

[editable path="Spaceship"]
